// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu.Item render with borderless props 1`] = `
<DocumentFragment>
  .cache-wjkgdk-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #3f4250;
  background: none;
}

.cache-wjkgdk-StyledItem svg {
  fill: #3f4250;
}

.cache-wjkgdk-StyledItem:hover,
.cache-wjkgdk-StyledItem:focus {
  color: #222638;
}

.cache-wjkgdk-StyledItem:hover svg,
.cache-wjkgdk-StyledItem:focus svg {
  fill: #222638;
}

<div>
    <button
      class="cache-wjkgdk-StyledItem ei26g5y1"
      role="menuitem"
      type="button"
    >
      Borderless Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with default props 1`] = `
<DocumentFragment>
  .cache-1rj7mbu-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #3f4250;
  background: none;
}

.cache-1rj7mbu-StyledItem svg {
  fill: #3f4250;
}

.cache-1rj7mbu-StyledItem:hover,
.cache-1rj7mbu-StyledItem:focus {
  color: #222638;
}

.cache-1rj7mbu-StyledItem:hover svg,
.cache-1rj7mbu-StyledItem:focus svg {
  fill: #222638;
}

<div>
    <button
      class="cache-1rj7mbu-StyledItem ei26g5y1"
      role="menuitem"
      type="button"
    >
      Default Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with disabled props 1`] = `
<DocumentFragment>
  .cache-vzca0s-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.cache-vzca0s-StyledItem svg {
  fill: #b5b7bd;
}

<div>
    <button
      class="cache-vzca0s-StyledItem ei26g5y1"
      disabled=""
      role="menuitem"
      type="button"
    >
      Disabled Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with sentiment danger 1`] = `
<DocumentFragment>
  .cache-l87rea-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #b3144d;
  background: none;
}

.cache-l87rea-StyledItem svg {
  fill: #b3144d;
}

.cache-l87rea-StyledItem:hover,
.cache-l87rea-StyledItem:focus {
  color: #92103f;
}

.cache-l87rea-StyledItem:hover svg,
.cache-l87rea-StyledItem:focus svg {
  fill: #92103f;
}

<div>
    <button
      class="cache-l87rea-StyledItem ei26g5y1"
      role="menuitem"
      type="button"
    >
      Danger
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders bottom 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1rj7mbu-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #3f4250;
  background: none;
}

.cache-1rj7mbu-StyledItem svg {
  fill: #3f4250;
}

.cache-1rj7mbu-StyledItem:hover,
.cache-1rj7mbu-StyledItem:focus {
  color: #222638;
}

.cache-1rj7mbu-StyledItem:hover svg,
.cache-1rj7mbu-StyledItem:focus svg {
  fill: #222638;
}

<div
    aria-controls="menu-:rn:"
    aria-describedby="menu-:rn:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="true"
      id="menu-:rn:"
      role="dialog"
    >
      <div
        class="cache-7sm35h-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div>
          <button
            class="cache-1rj7mbu-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            bottom
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders left 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(-16px, 0px, 0);
    -moz-transform: translate3d(-16px, 0px, 0);
    -ms-transform: translate3d(-16px, 0px, 0);
    transform: translate3d(-16px, 0px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(-16px, 0px, 0);
    -moz-transform: translate3d(-16px, 0px, 0);
    -ms-transform: translate3d(-16px, 0px, 0);
    transform: translate3d(-16px, 0px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1j9b7nn-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(-16px, 0px, 0);
  -moz-transform: translate3d(-16px, 0px, 0);
  -ms-transform: translate3d(-16px, 0px, 0);
  transform: translate3d(-16px, 0px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-1j9b7nn-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: 0px;
  left: 13px;
  -webkit-transform: translate(-50%, -50%) rotate(-90deg);
  -moz-transform: translate(-50%, -50%) rotate(-90deg);
  -ms-transform: translate(-50%, -50%) rotate(-90deg);
  transform: translate(-50%, -50%) rotate(-90deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-1j9b7nn-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1rj7mbu-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #3f4250;
  background: none;
}

.cache-1rj7mbu-StyledItem svg {
  fill: #3f4250;
}

.cache-1rj7mbu-StyledItem:hover,
.cache-1rj7mbu-StyledItem:focus {
  color: #222638;
}

.cache-1rj7mbu-StyledItem:hover svg,
.cache-1rj7mbu-StyledItem:focus svg {
  fill: #222638;
}

<div
    aria-controls="menu-:rq:"
    aria-describedby="menu-:rq:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-1j9b7nn-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="true"
      id="menu-:rq:"
      role="dialog"
    >
      <div
        class="cache-7sm35h-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div>
          <button
            class="cache-1rj7mbu-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            left
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders right 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(16px, 0px, 0);
    -moz-transform: translate3d(16px, 0px, 0);
    -ms-transform: translate3d(16px, 0px, 0);
    transform: translate3d(16px, 0px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(16px, 0px, 0);
    -moz-transform: translate3d(16px, 0px, 0);
    -ms-transform: translate3d(16px, 0px, 0);
    transform: translate3d(16px, 0px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1n2nssk-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(16px, 0px, 0);
  -moz-transform: translate3d(16px, 0px, 0);
  -ms-transform: translate3d(16px, 0px, 0);
  transform: translate3d(16px, 0px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-1n2nssk-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: 0px;
  left: -13px;
  -webkit-transform: translate(50%, -50%) rotate(90deg);
  -moz-transform: translate(50%, -50%) rotate(90deg);
  -ms-transform: translate(50%, -50%) rotate(90deg);
  transform: translate(50%, -50%) rotate(90deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-1n2nssk-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1rj7mbu-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #3f4250;
  background: none;
}

.cache-1rj7mbu-StyledItem svg {
  fill: #3f4250;
}

.cache-1rj7mbu-StyledItem:hover,
.cache-1rj7mbu-StyledItem:focus {
  color: #222638;
}

.cache-1rj7mbu-StyledItem:hover svg,
.cache-1rj7mbu-StyledItem:focus svg {
  fill: #222638;
}

<div
    aria-controls="menu-:rt:"
    aria-describedby="menu-:rt:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-1n2nssk-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="true"
      id="menu-:rt:"
      role="dialog"
    >
      <div
        class="cache-7sm35h-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div>
          <button
            class="cache-1rj7mbu-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            right
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders top 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1438xbx-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-1438xbx-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-1438xbx-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1rj7mbu-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #3f4250;
  background: none;
}

.cache-1rj7mbu-StyledItem svg {
  fill: #3f4250;
}

.cache-1rj7mbu-StyledItem:hover,
.cache-1rj7mbu-StyledItem:focus {
  color: #222638;
}

.cache-1rj7mbu-StyledItem:hover svg,
.cache-1rj7mbu-StyledItem:focus svg {
  fill: #222638;
}

<div
    aria-controls="menu-:rk:"
    aria-describedby="menu-:rk:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-1438xbx-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="true"
      id="menu-:rk:"
      role="dialog"
    >
      <div
        class="cache-7sm35h-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div>
          <button
            class="cache-1rj7mbu-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            top
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.Item 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1rj7mbu-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #3f4250;
  background: none;
}

.cache-1rj7mbu-StyledItem svg {
  fill: #3f4250;
}

.cache-1rj7mbu-StyledItem:hover,
.cache-1rj7mbu-StyledItem:focus {
  color: #222638;
}

.cache-1rj7mbu-StyledItem:hover svg,
.cache-1rj7mbu-StyledItem:focus svg {
  fill: #222638;
}

<div
    aria-controls="menu-:r4:"
    aria-describedby="menu-:r4:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="true"
      id="menu-:r4:"
      role="dialog"
    >
      <div
        class="cache-7sm35h-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div>
          <button
            class="cache-1rj7mbu-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            Menu.Item
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-vzca0s-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.cache-vzca0s-StyledItem svg {
  fill: #b5b7bd;
}

<div
    aria-controls="menu-:ra:"
    aria-describedby="menu-:ra:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="true"
      id="menu-:ra:"
      role="dialog"
    >
      <div
        class="cache-7sm35h-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div>
          <button
            class="cache-vzca0s-StyledItem ei26g5y1"
            disabled=""
            role="menuitem"
            type="button"
          >
            Menu.Item disabled
          </button>
        </div>
        <div>
          <button
            class="cache-vzca0s-StyledItem ei26g5y1"
            disabled=""
            role="menuitem"
            type="button"
          >
            Menu.Item Link disabled
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-h77bml-StyledLinkItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-h77bml-StyledLinkItem svg {
  fill: #3f4250;
}

.cache-h77bml-StyledLinkItem:hover,
.cache-h77bml-StyledLinkItem:focus {
  color: #222638;
}

.cache-h77bml-StyledLinkItem:hover svg,
.cache-h77bml-StyledLinkItem:focus svg {
  fill: #222638;
}

.cache-h77bml-StyledLinkItem:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    aria-controls="menu-:r7:"
    aria-describedby="menu-:r7:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="true"
      id="menu-:r7:"
      role="dialog"
    >
      <div
        class="cache-7sm35h-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div>
          <a
            class="cache-h77bml-StyledLinkItem ei26g5y0"
            href="/link"
            role="menuitem"
          >
            Menu.Item as Link
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with disclosure not a function 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-controls="menu-:r0:"
    aria-describedby="menu-:r0:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      type="button"
    >
      Menu is visible
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with visible=false 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-controls="menu-:r2:"
    aria-describedby="menu-:r2:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      type="button"
    >
      Menu is visible
    </button>
  </div>
</DocumentFragment>
`;
